[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
line_length = 79
profile = "black"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "bdew_datetimes"
description = "Generate and work with holidays of the BDEW-Calendar for power and gas in Germany"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Marcel Johannesmann", email = "mj0nez@fn.de" },
    { name = "Konstantin Klein" },
]
keywords = ["bdew", "edi@energy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "holidays>=0.59;python_version>='3.8'",
    "pytz>=2022.7.1",
    "python-dateutil",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
formatting = [
    "black==24.10.0",
    "isort==5.13.2"
]
linting = [
    "pylint==3.3.1"
]
spell_check = [
    "codespell==2.3.0"
]
packaging = [
    "build==1.2.2.post1",
    "twine==5.1.1"
]
tests = [
    "pytest==8.3.3"
]
type_check = [
    "mypy==1.11.2",
    "types-python-dateutil==2.9.0.20241003",
    "types-pytz==2024.2.0.20241003"
]

[project.urls]
Changelog = "https://github.com/mj0nez/bdew-datetimes/releases"
Homepage = "https://github.com/mj0nez/bdew-datetimes/"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_bdew_datetimes_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
