[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
line_length = 79
profile = "black"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "bdew_datetimes"
description = "Generate and work with holidays of the BDEW-Calendar for power and gas in Germany"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Marcel Johannesmann", email = "mj0nez@fn.de" },
    { name = "Konstantin Klein" },
]
keywords = ["bdew", "edi@energy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "holidays>=0.78;python_version>='3.9'",
    "pytz>=2022.7.1",
    "python-dateutil",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
formatting = [
    "black==25.9.0",
    "isort==6.1.0"
]
linting = [
    "pylint==3.3.8"
]
spell_check = [
    "codespell==2.4.1"
]
packaging = [
    "build==1.3.0",
    "twine==6.2.0"
]
tests = [
    "pytest==8.4.2"
]
type_check = [
    "mypy==1.18.2",
    "types-python-dateutil==2.9.0.20250822",
    "types-pytz==2025.2.0.20250809"
]

[project.urls]
Changelog = "https://github.com/mj0nez/bdew-datetimes/releases"
Homepage = "https://github.com/mj0nez/bdew-datetimes/"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_bdew_datetimes_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
