[metadata]
name = energy_datetime
version = 0.1
description = Generate and work with holidays of the BDEW-Calendar for power and gas in Germany.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
packages =
    energy_datetime
install_requires =
    holidays==0.16
python_requires = >=3.7

[options.package_data]
holidays = py.typed


[flake8]
extend-ignore = E203,F401,W503,W504
exclude = __init__.py,*.pyc,tests.py,build,dist
paths = ./energy_datetime/ ./tests/

[rstcheck]
ignore_language = python
