[metadata]
name = bdew_datetimes
description = Generate and work with holidays of the BDEW-Calendar for power and gas in Germany.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
package_dir =
    = src
packages = bdew_datetimes
install_requires =
    holidays>=0.16
    pytz>=2022.7.1
    python-dateutil
python_requires = >=3.7

[options.package_data]
holidays = py.typed


[flake8]
extend-ignore = E203,F401,W503,W504
exclude = __init__.py,*.pyc,tests.py,build,dist
paths = ./bdew_datetimes/ ./tests/

[rstcheck]
ignore_language = python
